compiler/flux-hir/src/lower/snapshots/flux_hir__lower__tests__lower_empty_fn.snap
---
source: compiler/flux-hir/src/lower/tests.rs
expression: s
---
Traits
------
Functions
---------
main() -> Tuple([])

