compiler/flux-hir/src/lower/snapshots/flux_hir__lower__tests__lower_type_mismatch.snap
---
source: compiler/flux-hir/src/lower/tests.rs
expression: s
---
[31m[E0003] Error:[0m type mismatch
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mmain.flx:1:21[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31m╭[0m[31m─[0m[31m─[0m[31m─[0m[31m▶[0m[31m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[34mi[0m[34m3[0m[34m2[0m[34m [0m[38;5;249m=[0m[38;5;249m>[0m[38;5;249m [0m[31m{[0m
 [38;5;246m  ·[0m [31m│[0m                  [34m─[0m[34m─[0m[34m┬[0m[34m─[0m   [34m🭯[0m   
 [38;5;246m  ·[0m [31m│[0m                    [34m╰[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m `i32`
 [38;5;246m  ·[0m [31m│[0m                         [34m│[0m   
 [38;5;246m  ·[0m [31m│[0m [34m╭[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m─[0m[34m╯[0m   
 [38;5;246m2 │[0m [31m├[0m[31m─[0m[34m│[0m [31m▶[0m[31m [0m[31m}[0m
 [38;5;246m  ·[0m [31m│[0m [34m│[0m   [34m🭯[0m   
 [38;5;246m  ·[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m type mismatch between `()` and `i32`
 [38;5;246m  ·[0m   [34m│[0m   [34m│[0m   
 [38;5;246m  ·[0m   [34m╰[0m[34m─[0m[34m─[0m[34m─[0m[34m┴[0m[34m─[0m[34m─[0m[34m─[0m `()`
[38;5;246m───╯[0m

